# guitar-effects

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_msvc.bat  deploy_qt.bat  install.bat  install.sh  run.bat  run.sh
src/: AudioEngine.cpp  AudioEngine.h  ClipManager.cpp  ClipManager.h  DSPChain.cpp  DSPChain.h  Looper.cpp  Looper.h  MainWindow.cpp  MainWindow.h  PitchShifter.cpp  PitchShifter.h  Recorder.cpp  Recorder.h  main.cpp
